# RAG-Chatbot

./: .dockerignore  .gitignore  Dockerfile  README.md  check_db.py  config.env.example  docker-compose.yml  enhanced_markdown_service.py  gunicorn.conf.py  init.sql  markdown_cli.py  markdown_document_service.py  populate_llm_patterns.py  pyproject.toml  requirements.txt  run.py
app/: __init__.py
app/api/: chatbot_routes.py  document_routes.py  health_routes.py  routes.py
app/core/: config.py  extensions.py
app/models/: __init__.py  chat.py  document.py  model_pattern.py
app/services/: bm25_service.py  chatbot_service.py  database_service.py  direct_model_service.py  document_service.py  ensemble_retriever_service.py  graph_rag_service.py  model_pattern_service.py  vector_search_service.py
app/utils/: response_helpers.py
data/: .gitkeep
migrations/: env.py
migrations/versions/: 002_update_chunk_schema.py  003_add_heading_fields.py  004_drop_heading_value.py  35d66f9d4ae7_drop_entity_and_section_columns_from_.py  add_tokenized_content.py  create_model_patterns_table.py  fe7cf02dfd99_merge_heads_for_model_patterns.py
ragbot/: __init__.py  app.py  extensions.py
ragbot/api/: __init__.py  admin_routes.py  chat_routes.py  document_routes.py  health_routes.py
ragbot/chat/: classification.py  formatting.py  orchestrator.py  prompt_builder.py  rag_engine.py  session.py
ragbot/config/: __init__.py  flask_config.py  paths.py  utils.py
scripts/: .gitkeep  check_db.py  extract_entities_manual.py  import_qa_data.py  markdown_cli.py  populate_llm_patterns.py  populate_tokenized_content.py  setup_database.py  simple_pattern_manager.py  start_services.py
src/: chunker.py  cleaner.py  embedder.py  enhanced_chat.py  extractor.py  markdown_extractor.py  metadata_ranker.py  simple_vector_store.py  text2json.py
static/: index.html
tests/: _entry.py  conftest.py  test_classification.py  test_formatting.py  test_prompt_builder.py  test_smoke.py  test_text_utils.py
(+30 files in other folders)
