[project]
name = "rag-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "docx>=0.2.4",
    "flask>=3.1.3",
    "flask-sqlalchemy>=3.1.1",
    "langchain-community>=0.4.2",
    "langextract>=1.5.0",
    "numpy>=2.4.6",
    "pgvector>=0.4.2",
    "protobuf>=7.35.0",
    "psutil>=7.2.2",
    "psycopg2-binary>=2.9.12",
    "pymupdf>=1.27.2.3",
    "python-dotenv>=1.2.2",
    "rank-bm25>=0.2.2",
    "rapidfuzz>=3.14.5",
    "requests>=2.34.2",
    "tiktoken>=0.13.0",
    "underthesea>=9.5.0",
]
