[project]
name = "rag-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "flask>=3.1.3",
    "flask-cors>=4.0.0",
    "flask-sqlalchemy>=3.1.1",
    "google-genai>=1.0.0",
    "langchain-community>=0.4.2",
    "langchain-text-splitters>=1.0.0",
    "langextract>=1.5.0",
    "numpy>=2.4.6",
    "pgvector>=0.4.2",
    "protobuf>=7.35.0",
    "psutil>=7.2.2",
    "psycopg2-binary>=2.9.12",
    "pymupdf>=1.27.2.3",
    "python-docx>=1.1.0",
    "python-dotenv>=1.2.2",
    "rank-bm25>=0.2.2",
    "rapidfuzz>=3.14.5",
    "requests>=2.34.2",
    "tiktoken>=0.13.0",
    "underthesea>=9.5.0",
]

[project.optional-dependencies]
# Graph-RAG feature deps. Imported lazily (inside functions) so they are NOT
# required for the API to boot. Install with: uv sync --extra graph-rag
graph-rag = [
    "langchain-google-genai>=2.0.0",
    "langchain-neo4j>=0.4.0",
    "neo4j>=5.0.0",
    "networkx>=3.0",
    "pyvis>=0.3.2",
    "torch>=2.0.0",
    "torch-geometric>=2.5.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pyflakes>=3.0.0",
]

[tool.uv]
# This is an application run from source (run.py), not an installable package.
package = false
